--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@bemoje/trie-map": "^1.6.2",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/interaction": "^6.1.10",
@@ -21,20 +22,23 @@
     "@fullcalendar/timeline": "^6.1.10",
     "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
-    "@mui/icons-material": "^5.15.2",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^5.16.7",
     "@mui/lab": "^5.0.0-alpha.153",
-    "@mui/material": "^5.15.2",
+    "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^6.18.2",
     "@mui/x-date-pickers": "latest",
     "@mui/x-date-pickers-pro": "latest",
-    "@phosphor-icons/react": "^2.0.15",
+    "@phosphor-icons/react": "^2.1.7",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "apexcharts": "^3.44.0",
-    "axios": "^1.6.2",
+    "axios": "^1.7.7",
     "change-case": "^5.3.0",
     "date-fns": "^3.0.6",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.13",
     "framer-motion": "^10.16.16",
+    "hooks": "^0.3.2",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
@@ -43,10 +47,10 @@
     "numeral": "^2.0.6",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-date-range": "^2.0.0-alpha.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.2",
@@ -59,21 +63,22 @@
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "rhythm": "file:",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "stylis-plugin-rtl": "^2.1.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.3.1",
+    "@faker-js/faker": "^9.2.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "mapbox-gl": "^3.0.1",
+    "mapbox-gl": "^3.8.0",
     "vite": "^5.0.0",
     "worker-loader": "^3.0.8"
   }
